--- a/src/index.ejs
+++ b/src/index.ejs
@@ -3,8 +3,14 @@
 	<head>
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
 		<title><%= htmlWebpackPlugin.options.title %></title>
+		<style>
+			#scene {
+				width: 600px;
+				height: 600px;
+			}
+		</style>
 	</head>
 	<body>
-		<canvas id="scene" width="600" height="600" />
+		<canvas id="scene" width="600" height="600"></canvas>
 	</body>
 </html>	
