--- a/src/index.ejs
+++ b/src/index.ejs
@@ -5,12 +5,13 @@
 		<title><%= htmlWebpackPlugin.options.title %></title>
 		<style>
 			#scene {
-				width: 600px;
-				height: 600px;
+				width: 900px;
+				height: 900px;
 			}
 		</style>
 	</head>
 	<body>
-		<canvas id="scene" width="600" height="600"></canvas>
+		<!--input type="number" id="spacing" name="spacing" min="15" max="50"-->
+		<canvas id="scene" style="background-color: 888;"></canvas>
 	</body>
 </html>	
