--- a/src/index.ejs
+++ b/src/index.ejs
@@ -5,13 +5,16 @@
 		<title><%= htmlWebpackPlugin.options.title %></title>
 		<style>
 			#scene {
-				width: 1000px;
-				height: 700px;
+				width: 100%;
+				height: 100%;
+			}
+			body {
+				overflow: hidden;
 			}
 		</style>
 	</head>
 	<body>
 		<!--input type="number" id="spacing" name="spacing" min="15" max="50"-->
-		<canvas id="scene" style="background-color: 888;"></canvas>
+		<canvas id="scene"></canvas>
 	</body>
 </html>	
