--- a/src/index.ejs
+++ b/src/index.ejs
@@ -14,7 +14,6 @@
 		</style>
 	</head>
 	<body>
-		<!--input type="number" id="spacing" name="spacing" min="15" max="50"-->
-		<canvas id="scene"></canvas>
+		<!--canvas id="scene"></canvas-->
 	</body>
 </html>	
